--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                                     class="text-base text-dark py-2 px-8 hover:text-primary  flex">Beranda</a>
                             </li>
                             <li class="group">
+                                <a href="#skiil" class="text-base text-dark py-2 px-8 hover:text-primary flex">Skiil</a>
+                            </li>
+                            <li class="group">
                                 <a href="#about" class="text-base text-dark py-2 px-8 hover:text-primary flex">Mari
                                     Berteman</a>
                             </li>
@@ -92,11 +95,78 @@
     </section>
     <!-- Hero section end -->
 
+
+    <!-- Skiil section start -->
+    <section id="skiil" class="pt-36 pb-16 bg-slate-100">
+        <div class="container">
+            <div class="w-full p-4 ">
+                <div class="max-w-xl mx-auto text-center mb-16">
+                    <h2 class="font-bold text-dark text-3xl mb-4">My Skiil</h2>
+                </div>
+                <!-- daftar skiil -->
+                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/html-5.png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/css-3.png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (17).png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/nodejs.png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/physics.png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (20).png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (21).png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/bootstrap.png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (18).png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 w-1/6 hover:scale-105">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (19).png" alt="belanja" class="w-full " />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skiil section end -->
+
+
     <!-- About section start -->
     <section id='about' class='pt-36 pb-32'>
         <div class='container'>
             <div class='flex flex-wrap '>
-                <div class='w-full px-4 text-center'>
+                <div class='w-full h-50 px-4 text-center'>
                     <h3 class='font-semibold text-dark text-2xl mb-4 lg:text-3xl  lg:pt-10'>Mari Berteman</h3>
                     <p class='font-medium text-secondary  text-center mb-4'>Ingin berkenalan lebih ? lansung aja klik
                         salah satu link dibawah ini ya!.</p>
@@ -156,17 +226,17 @@
                     <!-- <p class="font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga -->
                     <!-- quae amet fugit molestiae commodi quis quisquam natus dolorum dolores quia.</p> -->
                 </div>
-                <!-- belanja -->
+
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                    <!-- belanja -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/image/portofolio/belanja.png" alt="belanja" class="w-full" />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Belanja</h3>
-                        <p class="font-medium text-base text-secondary mb-5">Recipe merupakan aplikasi berbasis website,
-                            dimana user dapat mencari sebuah resep baru juga bisa menambahkan resep untuk bisa dilihat
-                            juga oleh orang lain, aplikasi ini juga dilengkapi dengan comment sehingga user dapat
-                            mengomentari resep orang lain.</p>
+                        <p class="font-medium text-base text-secondary  mb-5">Belanja merupakan aplikasi berbasis
+                            website,
+                            dimana user dapat membeli dan menjual suatu product</p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
                             href="https://apk-belanja-fe.vercel.app/">Link Demo</a>
                     </div>
@@ -243,6 +313,9 @@
                             <a href="#" class="inline-block hover:text-primary">Beranda</a>
                         </li>
                         <li>
+                            <a href="#skiil" class="inline-block hover:text-primary">Skiil</a>
+                        </li>
+                        <li>
                             <a href="#about" class="inline-block hover:text-primary">Mari Berteman</a>
                         </li>
                         <li>
@@ -295,7 +368,7 @@
                 <p class="font-medium text-xs text-slate-500 text-center">Dibuat dengan <span
                         class="text-pink-500">❤</span> oleh <a href="#" target="_blank" class="text-primary">Sri
                         Yuniar,</a> menggunakan <a href="https://tailwindcss.com"
-                        class="font-bold text-sky-500 ">Tailwan CSS 3</a>.</p>
+                        class="font-bold text-sky-500 ">Tailwan CSS 4</a>.</p>
             </div>
         </div>
     </footer>
