--- a/index.html
+++ b/index.html
@@ -107,52 +107,52 @@
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/html-5.png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/html-5.png" alt="html" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/css-3.png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/css-3.png" alt="css" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/pngwing.com (17).png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/pngwing.com (17).png" alt="javascript" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/nodejs.png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/nodejs.png" alt="nodeJs" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/physics.png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/physics.png" alt="react" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/pngwing.com (20).png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/pngwing.com (20).png" alt="express" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/pngwing.com (21).png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/pngwing.com (21).png" alt="postgre" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/bootstrap.png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/bootstrap.png" alt="bootstarp" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/pngwing.com (18).png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/pngwing.com (18).png" alt="tailwind" class="w-full " />
                         </div>
                     </div>
                     <div class="mb-12 p-4 w-1/6 hover:scale-105">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
-                            <img src="dist/image/skiil/pngwing.com (19).png" alt="belanja" class="w-full " />
+                            <img src="dist/image/skiil/pngwing.com (19).png" alt="saas" class="w-full " />
                         </div>
                     </div>
                 </div>
