--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id='home' class='pt-36'>
         <div class='container'>
             <div class='flex flex-wrap lg:right-0'>
-                <div class='w-full self-center px-4 lg:w-1/2'>
+                <div class='w-full self-center px-4 lg:w-1/2 text-justify'>
                     <h1 class='lg:text-2xl text-base font-semibold text-primary'>Hallo Semua 👋🖐, saya <span
                             class='block font-semibold text-dark text-4xl mt-1 lg:5xl'>Sri Yuniar</span> </h1>
                     <h2 class='font-medium text-slate-500 text-lg mb-5 lg:2xl'>Web <span
@@ -63,7 +63,7 @@
                         Poltekkes Kemenkes Maluku tahun 2020, memiliki pengalaman pekerjaan di lapangan dan menyukai
                         tantangan. </p>
 
-                    <p class='font-medium text-slate-400 mb-2 leading-relaxed '>Saat ini telah menyelesaikan pendidikan
+                    <p class='font-medium text-slate-400 mb-2 leading-relaxed'>Saat ini telah menyelesaikan pendidikan
                         terkait programmer dengan mengikuti Bootcamp Full Stack
                         Web Developer untuk mengembangkan kemampuan dan memperdalam ilmu terkait teknologi dan
                         programmer, serta pengembangan softskill untuk meningkatkan kepercayaan diri dan kepribadian.
@@ -199,6 +199,15 @@
                                     d='M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z' />
                             </svg>
                         </a>
+                        <!-- github -->
+                        <a target="_blank" href="https://github.com/sriyuniar541"
+                            class='w-9 h-9 mr-3 rounded-full flex justify-center items-center border-primary hover:border-primary hover:bg-primary hover:text-white text-slate-300'>
+                            <svg class='fill-current' role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>GitHub</title>
+                                <path
+                                    d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                            </svg>
+                        </a>
                         <!-- facebok -->
                         <!-- <a href='https://www.facebook.com/Sri Yuniar/' target='_blank'
                             class='w-9 h-9 mr-3 rounded-full flex justify-center items-center border-primary hover:border-primary hover:bg-primary hover:text-white text-slate-300'>
@@ -227,67 +236,79 @@
                     <!-- quae amet fugit molestiae commodi quis quisquam natus dolorum dolores quia.</p> -->
                 </div>
 
-                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto text-justify">
                     <!-- belanja -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/image/portofolio/belanja.png" alt="belanja" class="w-full" />
+                            <img src="dist/image/portofolio/belanja.png" alt="belanja"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Belanja</h3>
                         <p class="font-medium text-base text-secondary  mb-5">Belanja merupakan aplikasi berbasis
                             website,
-                            dimana user dapat membeli dan menjual suatu product</p>
+                            dimana user dapat membeli dan menjual suatu product. <br /><a class="text-primary"
+                                href="https://github.com/sriyuniar541/Apk-Belanja-Fe" target='_blank'>Link github</a>
+                        </p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-                            href="https://apk-belanja-fe.vercel.app/">Link Demo</a>
+                            href="https://apk-belanja-fe.vercel.app/" target='_blank'>Link Demo</a>
                     </div>
                     <!-- recipe -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/image/portofolio/recipe.png" alt="recipe" class="w-full" />
+                            <img src="dist/image/portofolio/recipe.png" alt="recipe"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Recipe</h3>
                         <p class="font-medium text-base text-secondary  mb-5">Recipe merupakan aplikasi berbasis
                             website, dimana user dapat mencari sebuah resep baru juga bisa menambahkan resep untuk bisa
                             dilihat juga oleh orang lain, aplikasi ini juga dilengkapi dengan comment sehingga user
-                            dapat mengomentari resep orang lain.</p>
+                            dapat mengomentari resep orang lain. <br /><a class="text-primary"
+                                href="https://github.com/sriyuniar541/Apk-Recipe-fe" target='_blank'>Link github</a></p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-                            href="https://meek-dasik-7555c9.netlify.app/">Link Demo</a>
+                            href="https://meek-dasik-7555c9.netlify.app/" target='_blank'>Link Demo</a>
                     </div>
                     <!-- telegram -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/image/portofolio/telegram.png" alt="telegram" class="w-full" />
+                            <img src="dist/image/portofolio/telegram.png" alt="telegram"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Telegram</h3>
                         <p class="font-medium text-base text-secondary mb-5">Telegram merupakan aplikasi berbasis
-                            website, dimana user dapat saling mengirim dan melihat pesan atau chat.</p>
+                            website, dimana user dapat saling mengirim dan melihat pesan atau chat. </p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-                            href="https://github.com/sriyuniar541/Apk-Telegram-socket-io--Fe">Link Github</a>
+                            href="https://github.com/sriyuniar541/Apk-Telegram-socket-io--Fe" target='_blank'>Link
+                            Github</a>
                     </div>
                     <!-- ticketing -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/image/portofolio/ticketing.png" alt="ticketing" class="w-full" />
+                            <img src="dist/image/portofolio/ticketing.png" alt="ticketing"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Ticketing</h3>
                         <p class="font-medium text-base text-secondary mb-5">Angkasa Tiket merupakan aplikasi berbasis
                             website, dimana user dapat memesan dan melihat tiket user juga bisa menjadi admin untuk
-                            dapat membuat dan menjual tiket</p>
+                            dapat membuat dan menjual tiket. <br /><a class="text-primary"
+                                href="https://github.com/easyManik/FE-AnkasaTicketing" target='_blank'>Link github</a>
+                        </p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-                            href="https://ankasa.rizkyproject.my.id/login">Link Demo</a>
+                            href="https://ankasa.rizkyproject.my.id/login" target='_blank'>Link Demo</a>
                     </div>
                     <!-- hire job -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/image/portofolio/hiringJob.png" alt="hireJob" class="w-full" />
+                            <img src="dist/image/portofolio/hiringJob.png" alt="hireJob"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
                         </div>
-                        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Hire Job</h3>
+                        <h3 class="font-semibold text-dark text-xl mt-5 ">Hire Job</h3>
                         <p class="font-medium text-base text-secondary mb-5">Hire Job merupakan aplikasi berbasis
                             website,aplikasi ini digunakan untuk user menawarkan dirinya agar dilihat oleh perusahaan
                             atau perekrut, user juga bisa menjadi perekrut untuk dapat mencari pekerja sesuai kriteria
-                            yang diinginkan.</p>
+                            yang diinginkan. <br /><a class="text-primary" href="https://github.com/Fanani23/hiring.git"
+                                target='_blank'>Link github</a></p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-                            href="https://fehirejobapp.vercel.app/">Link Demo</a>
+                            href="https://fehirejobapp.vercel.app/" target='_blank'>Link Demo</a>
                     </div>
                 </div>
             </div>
@@ -302,9 +323,13 @@
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2 mx-auto">
                     <h2 class="font-bold text-4xl text-white mb-5">Sriyuniar</h2>
                     <h3 class="font-bold text-2xl mb-2 text-white">Hubungi Saya</h3>
-                    <p>sriyuniar541@gmail.co,</p>
+                    <p>Alamat :</p>
                     <p>Air Besar Batu-Merah Rt 05/ Rw 17 Sirimau</p>
                     <p>Ambon, Maluku</p>
+                    <p>INDONESIA</p>
+                    <br />
+                    <p>Email : sriyuniar541@gmail.co,</p>
+                    <p>Telepon : +62 852361710170</p>
                 </div>
                 <div class="w-full px-4 mb-12 md:w-1/2 mx-auto">
                     <h3 class="font-semibold text-white mb-5">Tautan</h3>
@@ -352,6 +377,15 @@
                             <title>Gmail</title>
                             <path
                                 d='M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z' />
+                        </svg>
+                    </a>
+                    <!-- github -->
+                    <a target="_blank" href="https://github.com/sriyuniar541"
+                        class='w-9 h-9 mr-3 rounded-full flex justify-center items-center border-primary hover:border-primary hover:bg-primary hover:text-white text-slate-300'>
+                        <svg class='fill-current' role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <title>GitHub</title>
+                            <path
+                                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
                         </svg>
                     </a>
                     <!-- facebok -->
