update link github

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <p class="font-medium text-base text-secondary mb-5">Hire Job merupakan aplikasi berbasis
                             website,aplikasi ini digunakan untuk user menawarkan dirinya agar dilihat oleh perusahaan
                             atau perekrut, user juga bisa menjadi perekrut untuk dapat mencari pekerja sesuai kriteria
-                            yang diinginkan. <br /><a class="text-primary" href="https://github.com/Fanani23/hiring.git"
+                            yang diinginkan. <br /><a class="text-primary" href="https://github.com/Fanani23/fehirejobapp"
                                 target='_blank'>Link github</a></p>
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
                             href="https://fehirejobapp.vercel.app/" target='_blank'>Link Demo</a>
