--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         dan dapat dengan cepat menyesuaikan diri dengan lingkungan baru, dengan semangat yang tinggi dan
                         optimis dapat memberikan hasil dan solusi yang baik bagi perusahaan.</p>
 
-                    <a href='http://sriyuniar541@gmail.com' target="_blank"
+                    <a href='https://wa.me/+6285236171070?text=Hallo%20Sri' target="_blank"
                         class='text-base font-semibold text-white bg-primary px-8 py-3 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out'>Hubungi
                         Saya</a>
                 </div>
@@ -83,7 +83,7 @@
                         <img class='max-w-full mx-auto' src='./dist/image/foto_sri.png' alt='foto_profile' />
                         <span class='absolute bottom-0 -z-10 left-1/2  -translate-x-1/2 md:scale-125'>
                             <svg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg' width='400' height='400'>
-                                <path fill='#5eead4'
+                                <path fill='#ffb3c6'
                                     d='M40.5,-43.6C50.5,-30.4,55.2,-15.2,57.5,2.2C59.7,19.7,59.3,39.3,49.3,49.5C39.3,59.7,19.7,60.4,1,59.3C-17.6,58.3,-35.2,55.5,-51.8,45.3C-68.4,35.2,-84,17.6,-79.1,4.8C-74.3,-7.9,-49,-15.8,-32.4,-29C-15.8,-42.2,-7.9,-60.6,3.7,-64.2C15.2,-67.9,30.4,-56.8,40.5,-43.6Z'
                                     transform='translate(100 100) scale(1.1)' />
                             </svg>
@@ -310,6 +310,17 @@
                         <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
                             href="https://fehirejobapp.vercel.app/" target='_blank'>Link Demo</a>
                     </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/image/portofolio/landingPage.png" alt="hireJob"
+                                class="w-full h-56 hover:scale-105 transition duration-1000 ease-in-out " />
+                        </div>
+                        <h3 class="font-semibold text-dark text-xl mt-5 ">Landing Page Website</h3>
+                        <p class="font-medium text-base text-secondary mb-5">Landing Page Website merupakan website/blok pribadi untuk penyampaian informasi ke internet<br /><a class="text-primary" href="https://github.com/sriyuniar541/projectfe"
+                                target='_blank'>Link github</a></p>
+                        <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+                            href="https://websiteartikel.vercel.app/manfaatsusukambingbagikesehatan" target='_blank'>Link Demo</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -401,8 +412,10 @@
                 </div>
                 <p class="font-medium text-xs text-slate-500 text-center">Dibuat dengan <span
                         class="text-pink-500">❤</span> oleh <a href="#" target="_blank" class="text-primary">Sri
-                        Yuniar,</a> menggunakan <a href="https://tailwindcss.com"
-                        class="font-bold text-sky-500 ">Tailwan CSS 4</a>.</p>
+                        Yuniar
+                        <!-- ,</a> menggunakan <a href="https://tailwindcss.com"
+                        class="font-bold text-sky-500 ">Tailwan CSS 4</a> -->
+                        </p>
             </div>
         </div>
     </footer>
