--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/image/portofolio/landingPage.png" alt="hireJob"
-                                class="w-full h-56 hover:scale-105 transition duration-1000 ease-in-out " />
+                                class="w-full md:h-56 hover:scale-105 transition duration-1000 ease-in-out " />
                         </div>
                         <h3 class="font-semibold text-dark text-xl mt-5 ">Landing Page Website</h3>
                         <p class="font-medium text-base text-secondary mb-5">Landing Page Website merupakan website/blok pribadi untuk penyampaian informasi ke internet<br /><a class="text-primary" href="https://github.com/sriyuniar541/projectfe"
@@ -330,7 +330,7 @@
     <!-- Footer section start -->
     <footer class="bg-dark pt-24 pb-12 ">
         <div class="container">
-            <div class="flex flex-wrap">
+             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2 mx-auto">
                     <h2 class="font-bold text-4xl text-white mb-5">Sriyuniar</h2>
                     <h3 class="font-bold text-2xl mb-2 text-white">Hubungi Saya</h3>
