--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
                     </div>
                     <div class="mb-12 p-4 lg:w-1/6 w-1/4 hover:scale-105 hover:pointer-events-auto ">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (31).png" alt="postgre" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 lg:w-1/6 w-1/4 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (32).png" alt="postgre" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 lg:w-1/6 w-1/4 hover:scale-105 hover:pointer-events-auto ">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
                             <img src="dist/image/skiil/bootstrap.png" alt="bootstarp" class="w-full " />
                         </div>
                     </div>
@@ -153,6 +163,11 @@
                     <div class="mb-12 p-4 lg:w-1/6 w-1/4 hover:scale-105">
                         <div class="rounded-md shadow-md overflow-hidden img-cont">
                             <img src="dist/image/skiil/pngwing.com (19).png" alt="saas" class="w-full " />
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 lg:w-1/6 w-1/4 hover:scale-105">
+                        <div class="rounded-md shadow-md overflow-hidden img-cont">
+                            <img src="dist/image/skiil/pngwing.com (33).png" alt="saas" class="w-full " />
                         </div>
                     </div>
                 </div>
