--- a/index.html
+++ b/index.html
@@ -252,6 +252,21 @@
                 </div>
 
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto text-justify">
+                     <!-- Movie App -->
+                     <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/image/portofolio/movie.png" alt="movies"
+                                class="w-full hover:scale-105 transition duration-1000 ease-in-out" />
+                        </div>
+                        <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Movies App</h3>
+                        <p class="font-medium text-base text-secondary  mb-5">Movies App merupakan aplikasi berbasis
+                            website,
+                            dimana user dapat melihat daftar film terbaru dan memberi rating pada film. <br /><a class="text-primary"
+                                href="https://github.com/sriyuniar541/movies_app" target='_blank'>Link github</a>
+                        </p>
+                        <a class="bg-primary px-8 py-3 text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+                            href="https://teal-sunflower-d49b97.netlify.app/" target='_blank'>Link Demo</a>
+                    </div>
                     <!-- belanja -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
